# streaming_sound

./: .gitignore  .gitmodules  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/streaming_sound_example/: MainActivity.kt
example/android/app/src/main/kotlin/dev/royalcat/streaming_sound_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
hook/: build.dart
ios/: streaming_sound.podspec
ios/Classes/: streaming_sound.c
lib/: streaming_sound.dart
lib/src/: stream_player.dart  stream_recorder.dart  stream_sound_ffi.dart  streaming_sound_bindings_generated.dart
linux/: CMakeLists.txt
macos/: streaming_sound.podspec
src/: CMakeLists.txt  export.h  milo.c  player.c  player.h  recorder.c  recorder.h  streaming_sound.h
src/include/: player.h
src/src/: milo.c  player.c  recorder.c
test/: test_package_ffi_test.dart
windows/: CMakeLists.txt
